test_yuriiq/catalog/language/german/account/password.php
<?php

// text
$_['text_account']	= 'Konto';
$_['text_success']	= 'Das Passwort wurde geändert.';
$_['text_password']	= 'Passwort';

// error
$_['error_password']	= 'Passwort muss zwischen 4 und 20 Zeichen lang sein!';
$_['error_confirm']	= 'Passwort und Bestätigung stimmt nicht überein!';

// entry
$_['entry_password']	= 'Passwort:';
$_['entry_confirm']	= 'Passwort bestätigen:';

// heading
$_['heading_title']	= 'Passwort ändern';
?>